--- a/php-mysql/mysql_connect.php.config
+++ b/php-mysql/mysql_connect.php.config
@@ -1,1 +1,5 @@
+<?php
+// Change the name of this file to mysql_connect.php
+// Change the credentials to your server's credentials
 $conn =mysqli_connect("YOUR SERVER ADDRESS", "YOUR USERNAME", "YOUR PASSWORD", "YOUR DATABASE");
+?>
